// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitSection:  SubmitSection:  should not use url if not enabled 1`] = `
<Button
  color="orange"
  size="default"
  to={null}
  type="submit"
>
  Change Plan
</Button>
`;

exports[`SubmitSection:  SubmitSection:  should render the button 1`] = `
<Button
  color="orange"
  size="default"
  to="url"
  type="button"
>
  Change Plan
</Button>
`;
